--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,278 @@
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
 
+  <!-- EXIF (keep lite; we only fixed the math below) -->
+  <script src="https://unpkg.com/exifr/dist/lite.umd.js"></script>
+
+  <!-- HEIC→JPEG converter -->
+  <script src="https://unpkg.com/heic2any/dist/heic2any.min.js"></script>
+  <script>
+    // HEIC normalization (unchanged)
+    async function ensureSupported(file){
+      const t = (file.type || '').toLowerCase();
+      if (t === 'image/heic' || t === 'image/heif' || t === 'image/heif-sequence') {
+        try {
+          const base = (file.name?.replace(/\.[^.]+$/, '') || 'image');
+          const blob = await heic2any({ blob: file, toType: 'image/jpeg', quality: 0.92 });
+          if (!blob || !blob.size) throw new Error('Empty JPEG after convert');
+          return new File([blob], base + '.jpg', { type: 'image/jpeg' });
+        } catch (e) {
+          throw new Error('HEIC/HEIF conversion failed. Please use JPEG/PNG/WebP.');
+        }
+      }
+      return file;
+    }
+  </script>
+
+  <style>
+    body { background:#0b0b0f; color:#eaeaf0; font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif; }
+    .wrap { max-width:880px; margin:40px auto; padding:24px; background:#14141b; border-radius:16px; box-shadow:0 8px 28px rgba(0,0,0,.45); }
+    h1 { font-weight:700; font-size:24px; margin:0 0 12px; }
+    .row{display:flex; gap:16px; align-items:flex-start; flex-wrap:wrap}
+    .col{flex:1 1 320px}
+    label{display:block; font-size:13px; opacity:.85; margin-bottom:6px}
+    input[type="file"], textarea, select { width:100%; background:#0f0f15; color:#eaeaf0; border:1px solid #262634; border-radius:12px; padding:10px 12px; }
+    textarea{min-height:120px; resize:vertical}
+    button{width:100%; padding:12px 16px; background:#6b5bd1; color:#fff; border:0; border-radius:12px; font-weight:600; cursor:pointer}
+    button[disabled]{opacity:.6; cursor:not-allowed}
+    #thumbs{display:flex; gap:8px; flex-wrap:wrap}
+    .thumb{margin-top:8px; width:160px; height:160px; object-fit:cover; border-radius:10px; border:1px solid #262634}
+    details{margin-top:16px; background:#0f0f15; border:1px solid #262634; border-radius:12px; padding:10px 12px}
+    pre{white-space:pre-wrap; word-break:break-word; margin:0}
+
+    .banner{margin-top:12px; padding:12px 14px; border-radius:12px; border:1px solid transparent; font-weight:600}
+    .banner.ok{background:#0f1a12; border-color:#1f6d3d; color:#b9f3cf}
+    .banner.err{background:#1a1110; border-color:#a24a4a; color:#ffd1d1}
+  </style>
+</head>
+<body>
+  <noscript><div style="background:#ffdbdb;color:#300;padding:10px;border-radius:8px">
+    JavaScript is disabled. The Run button won’t work.
+  </div></noscript>
+
+  <div class="wrap">
+    <h1>Nano Banana — Image-to-Image</h1>
+
+    <div class="row">
+      <div class="col">
+        <label for="files">Select 1–4 images (jpeg/png/webp, ≤10MB each)</label>
+        <input id="files" type="file" accept="image/*" multiple />
+        <div id="thumbs"></div>
+      </div>
+
+      <div class="col">
+        <label for="prompt">Prompt</label>
+        <textarea id="prompt" placeholder="Describe the edit or style…"></textarea>
+        <div style="height:10px"></div>
+        <label for="format">Output format</label>
+        <select id="format">
+          <option value="png" selected>PNG</option>
+          <option value="jpeg">JPEG</option>
+        </select>
+
+        <!-- KIE image_size (exact tokens) -->
+        <div style="height:10px"></div>
+        <label for="imageSize">Image size</label>
+        <select id="imageSize">
+          <option value="auto" selected>Auto</option>
+          <option value="1:1">Square (1:1)</option>
+          <option value="3:4">Portrait 3:4</option>
+          <option value="9:16">Portrait 9:16</option>
+          <option value="4:3">Landscape 4:3</option>
+          <option value="16:9">Landscape 16:9</option>
+        </select>
+
+        <div style="height:14px"></div>
+        <button id="runBtn" type="button" onclick="window.__run && window.__run()">Run</button>
+        <div id="status" class="banner" role="status" aria-live="polite" hidden></div>
+      </div>
+    </div>
+
+    <details style="display:none">
+      <summary>Debug</summary>
+      <pre id="debug">BOOT: page parsed.</pre>
+    </details>
+  </div>
+
+<script>
+const dbg = document.getElementById('debug');
+const log = (...a) => { dbg.textContent += '\n' + a.map(x=>typeof x==='string'?x:JSON.stringify(x,null,2)).join(' '); };
+window.addEventListener('error', e => log('Window error:', e.message));
+window.addEventListener('unhandledrejection', e => log('Unhandled promise:', String(e.reason)));
+
+const filesEl = document.getElementById('files');
+const thumbsEl= document.getElementById('thumbs');
+const promptEl= document.getElementById('prompt');
+const formatEl= document.getElementById('format');
+const imageSizeEl = document.getElementById('imageSize');
+const runBtn  = document.getElementById('runBtn');
+const statusEl= document.getElementById('status');
+
+function showStatus(msg, kind){
+  statusEl.textContent = msg;
+  statusEl.className = 'banner ' + (kind === 'ok' ? 'ok' : 'err');
+  statusEl.hidden = false;
+}
+
+filesEl.addEventListener('change', () => {
+  thumbsEl.innerHTML = '';
+  [...filesEl.files].slice(0,4).forEach(f=>{
+    const url = URL.createObjectURL(f);
+    const img = document.createElement('img');
+    img.src = url; img.className = 'thumb';
+    thumbsEl.appendChild(img);
+  });
+});
+
+function newRunId(userId){
+  const r = crypto.getRandomValues(new Uint32Array(1))[0].toString(36);
+  return `${userId}-${Date.now()}-${r}`;
+}
+
+/* ---------- FIXED EXIF ROTATION (no more black bars on JPEG) ---------- */
+async function normalizeIfRotated(file) {
+  let orientation = 1;
+  try { orientation = await exifr.orientation(file) || 1; } catch {}
+  if (orientation === 1) return file;
+
+  const bmp = await createImageBitmap(file);
+  const w = bmp.width, h = bmp.height;
+
+  const c = document.createElement('canvas');
+  // swap dims for 90° cases
+  if (orientation >= 5 && orientation <= 8) {
+    c.width = h; c.height = w;
+  } else {
+    c.width = w; c.height = h;
+  }
+  const ctx = c.getContext('2d');
+
+  // Use bitmap dimensions (w/h) in transforms — NOT canvas dims.
+  switch (orientation) {
+    case 2: // horizontal flip
+      ctx.translate(w, 0); ctx.scale(-1, 1); break;
+    case 3: // 180°
+      ctx.translate(w, h); ctx.rotate(Math.PI); break;
+    case 4: // vertical flip
+      ctx.translate(0, h); ctx.scale(1, -1); break;
+    case 5: // transpose
+      ctx.rotate(0.5 * Math.PI); ctx.scale(1, -1); break;
+    case 6: // 90° CW
+      ctx.rotate(0.5 * Math.PI); ctx.translate(0, -h); break;
+    case 7: // transverse
+      ctx.rotate(0.5 * Math.PI); ctx.translate(w, -h); ctx.scale(-1, 1); break;
+    case 8: // 90° CCW
+      ctx.rotate(-0.5 * Math.PI); ctx.translate(-w, 0); break;
+    default: ;
+  }
+
+  ctx.drawImage(bmp, 0, 0);
+
+  // Export as JPEG; canvas fully covered → no transparent → no black bars.
+  const blob = await new Promise(r => c.toBlob(r, file.type.includes('png') ? 'image/png' : 'image/jpeg', 0.95));
+  const name = file.name?.replace(/\.[^.]+$/, file.type.includes('png') ? '.png' : '.jpg') || 'image.jpg';
+  return new File([blob], name, { type: blob.type });
+}
+/* --------------------------------------------------------------------- */
+
+/* multipart upload (unchanged except it calls the fixed rotator) */
+async function uploadViaFn(file, rid, index){
+  const supported = await ensureSupported(file);
+  const prepared  = await normalizeIfRotated(supported);
+
+  const fd = new FormData();
+  fd.append('file', prepared, `${rid}-${index}-${prepared.name || 'image'}`);
+  fd.append('run_id', rid);
+
+  const res = await fetch('/.netlify/functions/kie-upload', { method: 'POST', body: fd });
+  const j = await res.json().catch(()=>null);
+  if (!res.ok || !j || !j.downloadUrl) {
+    throw new Error((j && j.error) ? j.error : `kie-upload failed (${res.status})`);
+  }
+  return j.downloadUrl;
+}
+
+window.__run = async function(){
+  if (runBtn.disabled || runBtn.dataset.busy === '1') return;
+  const files = [...filesEl.files];
+  if (!files.length) { alert('Choose at least one image.'); return; }
+  if (files.length > 4) { alert('Max 4 images.'); return; }
+  for (const f of files){ if (f.size > 10*1024*1024){ alert(`"${f.name}" exceeds 10MB.`); return; } }
+
+  const oldText = runBtn.textContent;
+  statusEl.hidden = true;
+  runBtn.dataset.busy = '1';
+  runBtn.disabled = true; runBtn.textContent = 'Working…';
+  try {
+    const tg = window.Telegram?.WebApp;
+    const deepUid = new URLSearchParams(location.search).get('uid') || '';
+    const userId = tg?.initDataUnsafe?.user?.id || deepUid || `web-${Math.random().toString(36).slice(2,8)}`;
+    const run_id = newRunId(userId);
+
+    const urls = [];
+    for (let i=0;i<files.length;i++){
+      const u = await uploadViaFn(files[i], run_id, i);
+      urls.push(u);
+    }
+    if (!urls.length){
+      showStatus('❌ No images uploaded. Try JPEG/PNG/WebP.', 'err');
+      return;
+    }
+
+    const payload = {
+      prompt: ((promptEl.value ?? '').toString().replace(/\u00A0/g,' ').trim()) || '.',
+      format: (formatEl.value || 'png').toLowerCase(),
+      image_size: (imageSizeEl?.value || 'auto'),   // exact KIE tokens
+      imageUrls: urls,
+      uid: userId,
+      run_id
+    };
+
+    const res = await fetch('/.netlify/functions/kie-create' + `?rid=${encodeURIComponent(run_id)}&t=${Date.now()}`, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json', 'Cache-Control': 'no-store' },
+      body: JSON.stringify(payload)
+    });
+
+    const txt = await res.text();
+    try {
+      const j = JSON.parse(txt);
+      const data = j?.data || j?.response?.data || {};
+      const taskId   = data.taskId || data.id || '';
+      const recordId = data.recordId || '';
+      if (taskId || recordId) {
+        showStatus('✅ Submitted successfully. If you have enough credits, your image will be delivered in Telegram within ~30 seconds.\n\n✅ Запрос успешно принят. Если у вас достаточно кредитов, изображение будет доставлено в Telegram в течение ~30 секунд.', 'ok');
+      } else {
+        showStatus('✅ Submitted. Check Telegram for the result.', 'ok');
+      }
+    } catch { /* plain text body -> ignore */ }
+  } catch (err) {
+    log('RUN ERROR:', String(err));
+    showStatus('❌ ' + String(err.message || err), 'err');
+  } finally {
+    runBtn.textContent = oldText; runBtn.disabled = false; runBtn.dataset.busy='';
+  }
+};
+</script>
+</body>
+</html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Nano Banana — Image-to-Image</title>
+
+  <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self';
+                 img-src * data: blob:;
+                 connect-src 'self' https://api.kie.ai https://kieai.redpandaai.co https://hook.make.com;
+                 style-src 'self' 'unsafe-inline';
+                 script-src 'self' 'unsafe-inline' https://unpkg.com">
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+
   <!-- EXIF (NEW: use full build so HEIC orientation is read) -->
   <script src="https://unpkg.com/exifr/dist/full.umd.js"></script>
 
