--- a/public/mj-video-telegram.html
+++ b/public/mj-video-telegram.html
@@ -69,10 +69,6 @@
               You will receive the final video directly in Telegram.
             </p>
           </div>
-          <div class="text-right text-[10px] md:text-xs text-zinc-400">
-            Cost per run:<br>
-            <span class="text-emerald-300 font-semibold">2⚡</span>
-          </div>
         </div>
 
         <div class="grid md:grid-cols-[1.1fr,0.9fr] gap-4 md:gap-6 items-start">
@@ -102,29 +98,20 @@
                 Keep it short and clear. Movements, camera style, mood.
               </p>
             </div>
+            <input type="hidden" id="ratioSelect" value="1:1" />
 
-            <div class="space-y-2">
-              <label class="block text-xs font-medium text-zinc-300 mb-1">Aspect ratio</label>
-              <select
-                id="ratioSelect"
-                class="input-dark w-full text-xs rounded-xl px-3 py-2 text-zinc-100 focus:outline-none focus:ring-1 focus:ring-indigo-500">
-                <option value="1:1">1:1 (Square)</option>
-                <option value="9:16">9:16 (Vertical)</option>
-                <option value="16:9">16:9 (Horizontal)</option>
-              </select>
-            </div>
 
-            <div class="flex items-center justify-between gap-3">
+                                    <div class="space-y-2">
+              <button
+                id="runBtn"
+                class="btn w-full rounded-2xl px-4 py-3 text-sm font-semibold shadow-lg shadow-indigo-500/40">
+                Run (cost: 2⚡)
+              </button>
               <p id="statusText" class="text-[11px] text-zinc-500">
                 Ready.
               </p>
-              <button
-                id="runBtn"
-                class="btn rounded-xl px-4 py-2 text-xs font-semibold shadow-lg shadow-indigo-500/40">
-                Run (cost: 2⚡)
-              </button>
             </div>
-          </div>
+
 
           <div class="space-y-3">
             <div class="rounded-2xl border border-base-line bg-black/40 p-3 md:p-4">
