--- a/public/mj-video-telegram.html
+++ b/public/mj-video-telegram.html
@@ -107,9 +107,12 @@
                 class="btn w-full rounded-2xl px-4 py-3 text-sm font-semibold shadow-lg shadow-indigo-500/40">
                 Run (cost: 2⚡)
               </button>
-              <p id="statusText" class="text-[11px] text-zinc-500">
-                Ready.
-              </p>
+              <div id="statusBox" class="mt-3 rounded-2xl border border-green-600 bg-green-950/60 px-4 py-3 text-green-100 text-sm leading-snug hidden">
+  <div class="flex items-start gap-2">
+    <div class="text-2xl">✅</div>
+    <div id="statusText" class="flex-1"></div>
+  </div>
+</div>
             </div>
 
 
